footer overflow fix

--- a/style.css
+++ b/style.css
@@ -594,12 +594,13 @@ footer {
 }
 
 .footer-block {
-  padding: 1rem 0 1rem 4.2rem;
+  padding: 1rem 4.2rem 3rem 4.2rem;
 }
 
 .footer-unit {
   display: flex;
   flex-direction: column;
+  align-items: flex-start;
   line-height: 2rem;
 }
 
@@ -616,13 +617,10 @@ footer {
   .footer-block {
     display: flex;
     flex-direction: row;
-    width: 100%;
+    justify-content: space-between;
     max-width: 1600px;
-    margin: auto;
-    padding-left: 8.5rem;
   }
   .footer-unit {
-    align-items: flex-start;
-    width: 33%;
+    flex-grow: 1;
   }
 }
